<resources>
    <string name="app_name">ALC4 App</string>
    <string name="welcome">Welcome to ALC 4.0</string>
    <string name="about">About ALC</string>
    <string name="profile">My Profile</string>
    <string name="name">Muhammad Hashim</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Egypt</string>
    <string name="email">Email: m6hashim@gmail.com</string>
    <string name="phone">Phone Number: **********</string>
    <string name="slack">Slack username: @mhashim6</string>
    <string name="main_title">ALC4 Phase 1</string>
</resources>
